# MOTEP-OSW

./: .gitignore  Manifest.toml  Project.toml  README.md  TEP.jl  cases.csv  job.slurm  pyproject.toml
inputs/: cases_isone.csv  cases_pjm.csv
inputs/EPA_PJM9Zones_osw2_17_N5X5R/: generators.csv  lines_parameter_ref_1.xlsx  nodes.csv  solar.csv  weights_of_scenarios.csv  wind.csv
inputs/EPA_PJM9Zones_osw2_17_N5X5R_NS/: generators_loc_emission_damages.csv  lines.csv  weights_of_scenarios.csv
inputs/EPA_PJM9Zones_osw3_52_N5X5R/: load.csv  solar_normalized.csv  wind_normalized.csv
inputs/EPA_PJM9Zones_osw3_52_N5X5R_NS/: lines.csv  load.csv  solar.csv  solar_normalized.csv  wind.csv  wind_normalized.csv
inputs/ISONE8busTS_osw1_17_N5X5_NS/: load.csv  solar.csv  solar_normalized.csv  wind.csv  wind_normalized.csv
inputs/ISONE8busTS_osw6_51_N5X5/: lines.csv  lines_parameter_ref_6.xlsx  load.csv  nodes.csv  solar.csv  solar_normalized.csv  wind.csv  wind_normalized.csv
inputs/ISONE8busTS_osw6_51_N5X5_NS/: load.csv  solar.csv  solar_normalized.csv  weights_of_scenarios.csv  wind.csv  wind_normalized.csv
inputs/raw data/: PJM-ISONE-OSW-lists-2023.xlsx  TEPPC_TransCapCostCalculator_E3_2019_Update.xlsx  ave_marg_damages.csv  emissions2020.xlsx  epa_camd.csv  generators_2021_clustered_isone.csv  generators_clustered_isone.csv  lines_parameter_ref.xlsx  offshore_units_oswemr2022.xlsx
outputs/ISONE NS/: capacity_additions.csv  capacity_additions_diff.csv  costs.csv  costs_diff.csv  costs_operation.csv  (+3 more)
src/: input.jl  model.jl  model_pjm.jl  output.jl  output_pjm.jl
(+1296 files in other folders)
